<resources>
    <string name="app_name">TuVecinoTeAyuda</string>
    <string name="action_settings">Settings</string>
    <string name="intro_next">Siguiente</string>
    <string name="intro_skip">Saltar</string>

    <!--Login-->
    <string name="login_user">Teléfono o email</string>
    <string name="login_password">Contraseña</string>
    <string name="login_do_login">Acceder</string>
    <string name="login_want_to_help">Quiero Ayudar</string>
    <string name="login_need_help">Necesito Ayuda</string>
    <string name="login_login_error">Error en el login</string>
    <string name="login_login_error_invalid_user">Usuario no válido</string>
    <string name="login_login_error_invalid_password">Contraseña no válida</string>

    <!--Need help-->
    <string name="need_help_title">Necesito Ayuda</string>
    <string name="need_help_subtitle">Si necesitas ayuda o sabes de alguien que la pueda necesitar, rellena este formulario y una persona voluntaria de confianza te ayudará a cubrir tus necesidades, tales como hacerte la compra de alimentos, fármacos, útiles de casa, cuidar a los niños o algún otro tipo de asistencia.</string>
    <string name="need_help_button">Necesito Ayuda</string>


    <!--Want to help-->
    <string name="want_to_help_voluntary_title">Voluntari@</string>
    <string name="want_to_help_voluntary_subtitle">¿Quieres ayudar a otras personas? ¡Apúntate! Puedes ayudar tanto a que personas en riesgo no tengan que exponerse, como echando una mano a quien no pueda atender a sus mayores o niños.</string>
    <string name="want_to_help_voluntary_button">"¡Quiero Ayudar!"</string>
    <string name="want_to_help_title">Voluntari@</string>
    <string name="want_to_help_subtitle">¿Quieres ayudar a otras personas? ¡Apúntate! Puedes ayudar tanto a que personas en riesgo no tengan que exponerse, como echando una mano a quien no pueda atender a sus mayores o niños.</string>
    <string name="want_to_help_button">"¡Quiero Ayudar!"</string>

    <!--Register-->
    <string name="register_user">Nombre y Apellidos</string>
    <string name="register_phone">Teléfono</string>
    <string name="register_email">Email</string>
    <string name="register_password">Contraseña (8 car.min</string>
    <string name="register_repeat_password">Confirmar Conraseña</string>
    <string name="register_address">Dirección (Calle, Número, etc..)</string>
    <string name="register_postal_code">Codigo Postal</string>
    <string name="register_button">Inscribirme</string>

    <string-array name="regions">
        <item>Araba/Álava</item>
        <item>Albacete</item>
        <item>Alicante/Alacant</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Balears, Illes</item>
        <item>Barcelona</item>
        <item>Bizkaia</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón/Castelló</item>
        <item>Ceuta</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Coruña, A</item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Gipuzkoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>León</item>
        <item>Lleida</item>
        <item>Rioja, La</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Melilla</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Palmas, Las</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia/València</item>
        <item>Valladolid</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>

    <string-array name="cities">
        <item>Araba/Álava</item>
        <item>Albacete</item>
        <item>Alicante/Alacant</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Balears, Illes</item>
        <item>Barcelona</item>
        <item>Bizkaia</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón/Castelló</item>
        <item>Ceuta</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Coruña, A</item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Gipuzkoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>León</item>
        <item>Lleida</item>
        <item>Rioja, La</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Melilla</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Palmas, Las</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia/València</item>
        <item>Valladolid</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>

</resources>
