<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterFormActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/form_background"
        android:padding="@dimen/activity_horizontal_margin">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/login_name"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_user"
            android:padding="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            tools:hint="@string/register_user" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_email"
            android:padding="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_name"
            tools:hint="@string/register_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_phone"
            android:padding="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            tools:hint="@string/register_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_password"
            android:padding="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone"
            tools:hint="@string/register_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/repeated_password"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_repeat_password"
            android:padding="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            tools:hint="@string/register_repeat_password" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/regions"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/regions"
            android:hint="@string/register_repeat_password"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeated_password"
            tools:hint="@string/register_repeat_password" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/city"
            style="@style/Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:entries="@array/regions"
            android:hint="@string/register_repeat_password"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/regions"
            tools:hint="@string/register_repeat_password" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/address"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_address"
            android:padding="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            tools:hint="@string/register_address" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/postal_code"
            style="@style/MainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/register_postal_code"
            android:padding="@dimen/default_margin"
            android:theme="@style/MainEditTextTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address"
            tools:hint="@string/register_postal_code" />

        <org.tuvecinoteayuda.app.view.LoadingButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/min_tappable_size"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/default_margin_xxxlarge"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin_xxxlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/postal_code"
            app:loading_button_text="@string/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>