<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.tuvecinoteayuda.help.WantToHelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/default_margin_xxxlarge"
                android:scaleType="fitCenter"
                android:src="@drawable/admission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo2"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/default_margin_xxxlarge"
                android:scaleType="fitCenter"
                android:src="@drawable/admission"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                style="@style/H2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:lineSpacingExtra="0.5dp"
                android:text="@string/want_to_help_voluntary_title"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subtitle"
                style="@style/H3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:lineSpacingExtra="0.5dp"
                android:text="@string/want_to_help_voluntary_subtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/want_to_help_button"
                style="@style/Button.MainButtonYellow"
                android:layout_width="0dp"
                android:layout_height="@dimen/min_tappable_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/default_margin_xxxlarge"
                android:layout_marginTop="@dimen/default_margin_xxxlarge"
                android:layout_marginEnd="@dimen/default_margin_xxxlarge"
                android:text="@string/want_to_help_voluntary_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>